--- a/style.css
+++ b/style.css
@@ -37,12 +37,14 @@ html, body {
 }
 
 .editors {
+  position: relative;
   width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
   border-right: 1px solid #333;
 }
+
 
 .editor {
   flex: 1;
@@ -152,6 +154,21 @@ html, body {
 @media (max-width: 768px) {
   .floating-keyboard {
     display: block;
+  }
+}
+
+.touch-shield {
+  position: absolute;
+  top: 40px; /* tinggi tab bar */
+  left: 0;
+  width: 100%;
+  height: calc(100% - 40px);
+  z-index: 10;
+}
+
+@media (min-width: 769px) {
+  .touch-shield {
+    display: none;
   }
 }
 
