--- a/style.css
+++ b/style.css
@@ -168,3 +168,13 @@ html, body {
 .readonly .monaco-editor .scroll-decoration {
   box-shadow: none !important;
 }
+
+.readonly .monaco-editor .cursor {
+  display: none !important;
+}
+
+.readonly .monaco-editor .view-lines {
+  cursor: default !important;
+  user-select: none;
+  -webkit-user-select: none;
+}
